tests/NormalTests/paczka1/fuzzy1/26573249.err
Error in line 3: 9lIaDGg A130 8,9
Error in line 7: 9lIaDGg A657 61,7
Error in line 12: euixO S569 45,8
Error in line 17: lrvwQhR A657 10,6
Error in line 22: vq5uo9defX S459 37,8
Error in line 21: 9lIaDGg A657 7,0
Error in line 14: S569 A657 21,2
Error in line 38: S569 S459 37,8
